--- a/plugins/google-play-services/saved-games/overview.html
+++ b/plugins/google-play-services/saved-games/overview.html
@@ -76,17 +76,44 @@
                                 </div>
                             </a>
                         </li>
-                        <li>
-                            <a class="dropdown-item" href="../billing/overview.html">
+                        <li class="dropdown-toggle dropdown-submenu">
+                            <a class="dropdown-item" href="../../google-play-services/billing/overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/Billing/GooglePlay_Billing_Plugin_Logo.png" alt="Google Play Billing"
                                         class="dropdown-item-image">
                                     <div class="dropdown-item-text">
                                         Play: Billing
-                                        <span class="dropdown-item-subtext">Android Plugin</span>
+                                        <span class="dropdown-item-subtext">Android Plugins</span>
                                     </div>
                                 </div>
                             </a>
+                            <div class="submenu-overlay"></div>
+                            <ul class="dropdown-menu dropdown-menu-dark">
+                                <li>
+                                    <a class="dropdown-item" href="../../google-play-services/billing/overview.html">
+                                        <div class="dropdown-item-content">
+                                            <img src="../../../images/Billing/GooglePlay_Billing_Plugin_Logo.png" alt="Google Play Billing"
+                                                class="dropdown-item-image">
+                                            <div class="dropdown-item-text">
+                                                Play: Billing
+                                                <span class="dropdown-item-subtext">Android Plugin</span>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="../../google-play-services/billing-update/overview.html">
+                                        <div class="dropdown-item-content">
+                                            <img src="../../../images/Billing/GooglePlay_Billing_Plugin_Logo.png" alt="Google Play Billing"
+                                                class="dropdown-item-image">
+                                            <div class="dropdown-item-text">
+                                                Billing Library Update
+                                                <span class="dropdown-item-subtext">Android Plugin</span>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
                         <li>
                             <a class="dropdown-item" href="../in-app-reviews/overview.html">
