--- a/plugins/google-play-services/billing-update/getting_started.html
+++ b/plugins/google-play-services/billing-update/getting_started.html
@@ -226,7 +226,7 @@
                                 Purchase the Plugin
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                Purchase the plugin on the <a href="#" target="_blank">Official Unreal Engine Marketplace</a> (Enabled once live).
+                                Purchase the plugin on the <a href="https://www.unrealengine.com/marketplace/en-US/product/203601e3ab6f4083b92a3fb6d056a9d9" target="_blank">Official Unreal Engine Marketplace</a>.
                             </p>
                             <li class="list-group-item">
                                 [Optional] Older Engine Versions
