begin adding google base services plugin documentation

--- a/plugins/google-play-services/base-services/overview.html
+++ b/plugins/google-play-services/base-services/overview.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="google-site-verification" content="dlNBu8NsYLxnSggBKxQuIAh92PmPK5p_zQ1dF7BVWkc" />
-    <title>UE Plugin | Admob</title>
+    <title>UE Plugin | Play Base Services</title>
     <link rel="icon" type="image/png" href="../../../images/PorretGaming_Logo_Cut.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../../style.css">
@@ -61,7 +61,7 @@
                     <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-centered" id="dropdownMenu2"
                         aria-labelledby="navbarDropdown">
                         <li>
-                            <a class="dropdown-item" href="../../google-play-services/saved-games/overview.html">
+                            <a class="dropdown-item" href="../saved-games/overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/SavedGames/GooglePlay_SavedGames_Plugin_Logo.png"
                                         alt="Google Play Saved Games" class="dropdown-item-image">
@@ -73,7 +73,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="../../google-play-services/events/overview.html">
+                            <a class="dropdown-item" href="../events/overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/Events/GooglePlay_Events_Plugin_Logo.png"
                                         alt="Google Play Events" class="dropdown-item-image">
@@ -124,7 +124,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="../../google-play-services/in-app-reviews/overview.html">
+                            <a class="dropdown-item" href="../in-app-reviews/overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/InAppReviews/GooglePlay_Reviews_Plugin_Logo.png" alt="Google Play Reviews"
                                         class="dropdown-item-image">
@@ -136,7 +136,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="../../google-play-services/in-app-updates/overview.html">
+                            <a class="dropdown-item" href="../in-app-updates/overview.html">
                                 <div class="dropdown-item-content">
                                     <img src="../../../images/InAppUpdates/GooglePlay_InAppUpdates_Plugin_Logo.png" alt="Google Play Updates"
                                         class="dropdown-item-image">
@@ -201,54 +201,46 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="privacy_settings.html">
-                                Privacy Settings
+                            <a class="nav-link inactive" href="google_sign_in.html">
+                                Google Sign-In
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="banner_ads.html">
-                                Banner Ads
+                            <a class="nav-link inactive" href="games_sign_in.html">
+                                Games Sign-In
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="app_open_ads.html">
-                                App Open Ads
+                            <a class="nav-link inactive" href="achievements.html">
+                                Achievements
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="interstitial_ads.html">
-                                Interstitial Ads
+                            <a class="nav-link inactive" href="leaderboards.html">
+                                Leaderboards
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="rewarded_interstitial_ads.html">
-                                Rewarded Interstitial Ads
+                            <a class="nav-link gradient-container" target="_blank" href="../saved-games/overview.html">
+                                Saved Games
                             </a>
+                            <div class="arrow"></div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="rewarded_video_ads.html">
-                                Rewarded Video Ads
+                            <a class="nav-link gradient-container" target="_blank" href="../events/overview.html">
+                                Events
                             </a>
+                            <div class="arrow"></div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="mediation.html">
-                                Mediation
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link gradient-container" target="_blank" href="../../google-play-services/base-services/overview.html">
-                                Google Play Game Services
+                            <a class="nav-link gradient-container" target="_blank" href="../../advertising/admob/overview.html">
+                                Admob Advertising
                             </a>
                             <div class="arrow"></div>
                         </li>
                         <hr />
                         <li class="nav-item">
                             <a class="nav-link disabled">Object Definitions</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link inactive" href="consent_preferences.html">
-                                Consent Preferences
-                            </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link inactive" href="enumerations.html">
@@ -273,46 +265,28 @@
             <main role="main" class="col-md-9 ml-sm-auto col-lg-7 px-4">
                 <div class="container border-bottom"
                     style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h2 text-white-shadow">Advanced Admob Ads (In Development)</h1>
+                    <h1 class="h2 text-white-shadow">Google Play Base Services V2 Overview (In Development)</h1>
                 </div>
-                <div class="container" style="margin-left: 0px; padding-left: 0px;">
+                <div class="container" style="margin-left: 0px; padding-left: 0px">
                     <div class="info">
                         <p class="content">
-                            We have exposed our documentation early in order to get feedback and improve our plugin before release.
-                        </p>
-                        <p class="content" style="margin-bottom: 0rem;">
-                            If you are interested in this plugin, we would love to know what you think, so please, let us know!
-                        </p>
-                    </div>
-                    <div class="info" style="margin-top: 20px">
-                        <p class="content">
-                            <b>Advanced Admob Ads</b>
+                            <b>The Google Play Base Services Version 2</b>
                         </p>
                         <p class="content">
-                            The Google Admob Library is a tool used to display various different types of adverts within your mobile application. With this, developers
-                            can monetize their games by displaying advertisements in accordance with their guidelines.
+                            Google Play Game Services include many amazing features for you to make use of to improve your game.
+                            Below you can find a list of services provided by Google Play Games with the extra services sold seperately.
                         </p>
                         <ul>
-                            <li class="blue-diamond">Privacy Settings (GDPR and COPPA)</li>
-                            <li class="blue-diamond">Banner Ads</li>
-                            <li class="blue-diamond">App Open Ads</li>
-                            <li class="blue-diamond">Interstitial Ads</li>
-                            <li class="blue-diamond">Rewarded Interstitial Ads</li>
-                            <li class="blue-diamond">Rewarded Video Ads</li>
-                            <li class="blue-diamond">Mediation</li>
+                            <li class="blue-diamond">Google Sign-In</li>
+                            <li class="blue-diamond">Play Games Sign-In</li>
+                            <li class="blue-diamond">Achievements</li>
+                            <li class="blue-diamond">Leaderboards</li>
+                            <li class="blue-diamond">Saved Games [<a href="../saved-games/overview.html">Sold Seperately</a>]</li>
+                            <li class="blue-diamond">Events [<a href="../events/overview.html">Sold Seperately</a>]</li>
+                            <li class="blue-diamond">Admob Advertising [<a href="../../advertising/admob/overview.html">Sold Seperately</a>]</li>
                         </ul>
-                        <p class="content">
-                            By making use of these different types of advertisements within your appication at key points, you can unlock additional revenue streams, ultimately creating a sustainable business model for your Android Game.
-                        </p>
-                        <p class="content">
-                            <span style="font-weight: 500;">Google Play Games Services:</span>
-                        </p>
-                        <p class="content">
-                            Using this plugin, you will no longer be able to make use of the Unreal Engine provided Google Play Game Services.
-                        </p>
                         <p class="content" style="margin-bottom: 0rem;">
-                            In the event you make use of these services, we have released a <a style="font-weight: 500;" href="../../google-play-services/base-services/overview.html">Seperate Plugin</a> which upgrades the built-in Google Play Games libraries to be compatible.
-                            This seperate plugin will replace and drastically improve all features of the default Play Games Services provided by Unreal Engine.
+                            These features solve many problems encountered during mobile Android game development for you.
                         </p>
                     </div>
                     <div class="info" style="margin-top: 20px">
@@ -320,62 +294,56 @@
                             <b>The Unreal Engine Plugin</b>
                         </p>
                         <p class="content">
-                            Introducing the Unreal Engine plugin for the Admob service, a powerful tool that brings all the features of the latest <span style="font-weight: 500">Google Admob Service</span> directly to your Unreal Engine projects.
-                            This plugin is designed to be as simple as possible, while exposing as much of the library features to you.
+                            Introducing the Unreal Engine plugin for the Google Play Games service, a powerful tool that brings the features of <span style="font-weight: 500">Play Games Version 2</span> directly to your Unreal Engine projects.
+                            This plugin is designed to expose the Games default service's functionality to blueprint scripting, simplifying the integration process for game developers.
                         </p>
                         <p class="content">
-                            We have taken special measures to <span style="font-weight: 500">handle all Engine versions from Unreal Engine 4.27 onwards</span> to cater for all the requirements of keeping the Admob library as up to date as possible.
-                            With the latest version of Admob, the outdated UE built in Google Play Services library does not work, so we have also <span style="font-weight: 500">released a plugin which offers the upgraded Google Play Services</span> to allow you to use both in the event that is part of your requirements.
-                            In addition to this, all our available plugins can automatically detect this upgrade and adapt to the latest library as well.
+                            With an intuitive and user-friendly interface seamlessly integrated into the Unreal Engine editor, connecting to the service becomes a breeze.
+                            Whether you're a seasoned Unreal Engine developer or new to the platform, our plugin empowers you to easily perform all the default features provided by the Play Games V2 Library, enhancing the capabilities of your game.
+                        </p>
+                        <p class="content">
+                            When making use of this plugin, you must not use the built in Play Games blueprint nodes provided in Unreal Engine.
+                            All functionality has been replaced and enhanced by this plugin.
+                        </p>
+                        <p class="content">
+                            This plugin is <span style="font-weight: 500;">compatible with all our other plugins</span>, specifically our <a href="../../advertising/admob/overview.html">Advanced Admob Advertising Plugin</a> and our extended Google Play Games services (<a href="../saved-games/overview.html">Saved Games</a> and <a href="../events/overview.html">Events</a>).
                         </p>
                         <p class="content" style="margin-bottom: 0rem;">
-                            Here is a summary of all the blueprint nodes the Advanced Admob Ads plugin has to offer.
+                            Here is a summary of all the blueprint nodes the Play Base Services plugin has to offer.
                         </p>
                     </div>
                     <div class="container"
                         style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px; border-radius: 20px;">
-                        <h1 class="list-group-item">Privacy Settings</h1>
+                        <h1 class="list-group-item">Google Sign-In</h1>
                     </div>
                     <div style="display: flex; justify-content: center; align-items: center; margin-top: 1rem;">
-                        <img src="../../../images/Admob/PrivacyBlueprintNodes.png" style="width: 75%">
+                        <img src="../../../images/PlayBaseServices/Google_BlueprintNodes.png">
                     </div>
                     <div class="container"
                         style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px; border-radius: 20px;">
-                        <h1 class="list-group-item">Advanced Banner Ads</h1>
+                        <h1 class="list-group-item">Google Play Games Sign In</h1>
                     </div>
                     <div style="display: flex; justify-content: center; align-items: center; margin-top: 1rem;">
-                        <img src="../../../images/Admob/BannerBlueprintNodes.png" style="width: 70%">
+                        <img src="../../../images/PlayBaseServices/GooglePlayGames_BlueprintNodes.png">
                     </div>
                     <div class="container"
                         style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px; border-radius: 20px;">
-                        <h1 class="list-group-item">Advanced App Open Ads</h1>
+                        <h1 class="list-group-item">Achievements</h1>
                     </div>
                     <div style="display: flex; justify-content: center; align-items: center; margin-top: 1rem;">
-                        <img src="../../../images/Admob/AppOpenBlueprintNodes.png" style="width: 80%">
+                        <img src="../../../images/PlayBaseServices/Achivements_BlueprintNodes.png">
                     </div>
                     <div class="container"
                         style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px; border-radius: 20px;">
-                        <h1 class="list-group-item">Advanced Interstitial Ads</h1>
+                        <h1 class="list-group-item">Leaderboards</h1>
                     </div>
                     <div style="display: flex; justify-content: center; align-items: center; margin-top: 1rem;">
-                        <img src="../../../images/Admob/InterstitialBlueprintNodes.png" style="width: 60%">
+                        <img src="../../../images/PlayBaseServices/Leaderboard_BlueprintNodes.png" style="width: 95%">
                     </div>
-                    <div class="container"
-                        style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px; border-radius: 20px;">
-                        <h1 class="list-group-item">Advanced Rewarded Video Ads</h1>
+                    
+                    <div style="margin-bottom: 100px">
                     </div>
-                    <div style="display: flex; justify-content: center; align-items: center; margin-top: 1rem;">
-                        <img src="../../../images/Admob/RewardedVideoBlueprintNodes.png" style="width: 70%">
-                    </div>
-                    <div class="container"
-                        style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px; border-radius: 20px;">
-                        <h1 class="list-group-item">Advanced Rewarded Interstitial Ads</h1>
-                    </div>
-                    <div style="display: flex; justify-content: center; align-items: center; margin-top: 1rem;">
-                        <img src="../../../images/Admob/RewardedInterstitialBlueprintNodes.png" style="width: 75%">
-                    </div>
-                    <div style="margin-bottom: 200px">
-                    </div>
+                    
                 </div>
             </main>
             <div class="col-md-3 d-none d-md-block">
